--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,62 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>AngularGoogleBookApi</title>
+  <title>Ng3Routing</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Bootstrap core CSS -->
+    <link href="/assets/css/bootstrap.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="/assets/css/main.css" rel="stylesheet">
+	  <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="assets/js/html5shiv.js"></script>
+      <script src="assets/js/respond.min.js"></script>
+    <![endif]-->
+
+    <script src="/assets/js/jquery.min.js"></script>
+	<script src="/assets/js/modernizr.custom.js"></script>
+    <script type="text/javascript" src="https://www.google.com/books/jsapi.js"></script>
+  
+	
 </head>
-<body>
-  <app-root>Loading...</app-root>
+  <body>
+  
+  <!-- ========== HEADER SECTION ========== -->
+
+	<div id="headerwrap">
+		<div class="container">
+	
+	
+        <app-root></app-root>
+				
+			
+		</div><!-- /container -->
+	</div><!-- /headerwrap -->
+	
+	
+	
+	
+
+
+	
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+	<script src="/assets/js/classie.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/smoothscroll.js"></script>
+	<script src="/assets/js/main.js"></script>
+    <script type="text/javascript">
+
+    </script>
 </body>
 </html>
